force-app/main/default/objects/Purchase_Order__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>BATHING SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>NSD</fullName>
            </value>
            <value>
                <fullName>KEY ACCOUNTS</fullName>
            </value>
            <value>
                <fullName>VENGERI</fullName>
            </value>
            <value>
                <fullName>BUDGET BUY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>