force-app/main/default/objects/Purchase_Order__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Provided</fullName>
                <default>true</default>
                <label>To Be Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>