force-app/main/default/objects/Purchase_Order__c/fields/Stock_Request__c.field-meta.xml
<CustomField>
    <fullName>Stock_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Request</label>
    <referenceTo>Stock_Request__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>