force-app/main/default/objects/Purchase_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Sum of Total Price across all related Purchase Order Items.</description>
    <label>Total Amount</label>
    <summarizedField>Purchase_Order_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Order_Item__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>