force-app/main/default/objects/Purchase_Order__c/fields/Warehouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Address__c</fullName>
    <formula>Warehouse__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Warehouse Address</label>
    <type>Text</type>
</CustomField>